--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
@@ -1,6 +1,6 @@
 <div align="center">
     <p class="info-sub-title" style="font-size: 14px;">
-        <span><b>Nombre del contratista: {{ solicitudPago.contratoSon.contratacion.contratista.nombre }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Número de identificación: {{ solicitudPago.contratoSon.contratacion.contratista.numeroIdentificacion }} </b></span>
+        <span>Nombre del contratista: <b>{{ solicitudPago.contratoSon.contratacion.contratista.nombre }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Número de identificación: <b>{{ solicitudPago.contratoSon.contratacion.contratista.numeroIdentificacion }} </b></span>
     </p>
 </div>
 <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
