--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -49,7 +49,7 @@
                         <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
                     <ng-container matColumnDef="saldo">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual DRP</th>
                         <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
