--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -202,7 +202,7 @@
                                                             <label  class="label-left"
                                                                     for="valorDescuento"
                                                                     [ngClass]="{ 'color-secondaryColor': (aportante.get('valorDescuento').invalid && aportante.get('valorDescuento').touched) || (aportante.get('valorDescuento').invalid && estaEditando) }">
-                                                                    Valor del descuento
+                                                                    Valor facturado por el concepto para el aportante
                                                             </label>
                                                         </div>
                                                         <div class="col d-flex">
