--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/form-observacion-balance/form-observacion-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/form-observacion-balance/form-observacion-balance.component.html
@@ -11,7 +11,7 @@
               (observaciones.get('tieneObservacion').invalid && estaEditando)
             "
           >
-            ¿Desde la supervisión tiene observaciones frente a el balance que deban ser tenidas en cuenta en la
+            ¿Desde control y seguimiento tiene observaciones frente a el balance que deban ser tenidas en cuenta en la
             liquidación?
           </label>
         </div>
