--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/observaciones-supervisor/observaciones-supervisor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/observaciones-supervisor/observaciones-supervisor.component.html
@@ -25,3 +25,31 @@
     ></p>
   </mat-card-content>
 </mat-card>
+<!--Solo detalle--->
+<mat-card class="shipping-card var-main-gris" *ngIf="esVerDetalle && observacionDetalle">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="header-card--text">
+      Aprobación Supervisor
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      <strong>
+        <span>{{ observacionDetalle.fechaCreacion | date: 'dd/MM/yyyy' }} </span>
+      </strong>
+    </p>
+    <p>
+      <strong>
+        {{ txt_pregunta_detalle }}
+      </strong>
+      
+      <span *ngIf="observacionDetalle.tieneObservacion == true"> Si </span>
+      <span *ngIf="observacionDetalle.tieneObservacion != true"> No </span>
+    </p>
+    <p
+      class="text-justify"
+      *ngIf="observacionDetalle.observacion != null && observacionDetalle.observacion != ''"
+      [innerHTML]="observacionDetalle.observacion"
+    ></p>
+  </mat-card-content>
+</mat-card>
