--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
@@ -70,7 +70,7 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="!esVerDetalle && element.registroCompleto !== 'Completo'"
           mat-button
           mat-raised-button
           color="accent"
@@ -78,6 +78,24 @@
           [routerLink]="['aprobarBalance']"
         >
         Aprobar
+        </a> 
+        <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarBalance']"
+        >
+          Ver detalle/Editar
+        </a>
+        <a *ngIf="esVerDetalle"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleBalance']"
+        >
+         Ver detalle
         </a>
       </td>
     </ng-container>
