--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
@@ -68,7 +68,7 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="!esVerDetalle && element.registroCompleto !== 'Completo'"
           mat-button
           mat-raised-button
           color="accent"
@@ -76,6 +76,24 @@
           [routerLink]="['aprobarInformeFinal', element.proyectoId]"
         >
           Aprobar
+        </a> 
+        <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarInformeFinal', element.proyectoId]"
+        >
+          Ver detalle/Editar
+        </a>
+        <a *ngIf="esVerDetalle"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleInformeFinal', element.proyectoId]"
+        >
+         Ver detalle
         </a>
       </td>
     </ng-container>
