--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
@@ -84,15 +84,23 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a *ngIf="element.estadoAprobacionLiquidacionCodigo !== '3'"
+        <a *ngIf="element.estadoAprobacionLiquidacionCodigo === '0' || element.estadoAprobacionLiquidacionCodigo == null || element.estadoAprobacionLiquidacionCodigo == ''"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['aprobarRequisitosParaLiquidacion', element.contratacionProyectoId]"
         >
-          <span *ngIf="element.estadoAprobacionLiquidacionCodigo === '0' || element.estadoAprobacionLiquidacionCodigo == null || element.estadoAprobacionLiquidacionCodigo == ''">Aprobar requisitos para liquidación</span>
-          <span *ngIf="element.estadoAprobacionLiquidacionCodigo === '1' || element.estadoAprobacionLiquidacionCodigo === '2'">Ver detalle/Editar</span>
+          Aprobar requisitos para liquidación
+        </a>
+        <a *ngIf="element.estadoAprobacionLiquidacionCodigo === '1' || element.estadoAprobacionLiquidacionCodigo === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarRequisitos', element.contratacionProyectoId]"
+        >
+          Ver detalle/Editar
         </a>
         <button
           *ngIf="element.estadoAprobacionLiquidacionCodigo === '2'"
@@ -111,7 +119,7 @@
           color="accent"
           class="btn-table"
           type="button"
-          [routerLink]="['verDetalle', element.contratacionProyectoId]"
+          [routerLink]="['verDetalleRequisitos', element.contratacionProyectoId]"
         >
           Ver detalle
         </a>
