--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
@@ -34,7 +34,7 @@
             Gestión
             </th>
             <td mat-cell *matCellDef="let element">
-            <a
+            <a *ngIf="!esVerDetalle && element.registroCompleto !== 'Completo'"
                 mat-button
                 mat-raised-button
                 color="accent"
@@ -42,6 +42,24 @@
                 [routerLink]="['verificarBalance']"
             >
             Verificar
+            </a> 
+            <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
+                mat-button
+                mat-raised-button
+                color="accent"
+                class="btn-table"
+                [routerLink]="['verDetalleEditarBalance']"
+            >
+            Ver detalle/Editar
+            </a>
+            <a *ngIf="esVerDetalle"
+                mat-button
+                mat-raised-button
+                color="accent"
+                class="btn-table"
+                [routerLink]="['verDetalleBalance']"
+            >
+            Ver detalle
             </a>
             </td>
         </ng-container>
