--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
@@ -42,15 +42,23 @@
             Gestión
             </th>
             <td mat-cell *matCellDef="let element">
-            <a *ngIf="element.estadoTramiteLiquidacionCodigo !== '3'"
+            <a *ngIf="element.estadoTramiteLiquidacionCodigo === '0' || element.estadoTramiteLiquidacionCodigo == null || element.estadoTramiteLiquidacionCodigo == ''"
+            mat-button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            [routerLink]="['verificarRequisitos', element.contratacionProyectoId]"
+            >
+                Verificar requisitos para liquidación
+            </a>
+            <a *ngIf="element.estadoTramiteLiquidacionCodigo === '1' || element.estadoTramiteLiquidacionCodigo === '2'"
                 mat-button
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                [routerLink]="['verificarRequisitos', element.contratacionProyectoId]"
+                [routerLink]="['verDetalleEditarRequisitos', element.contratacionProyectoId]"
             >
-                <span *ngIf="element.estadoTramiteLiquidacionCodigo === '0' || element.estadoTramiteLiquidacionCodigo == null || element.estadoTramiteLiquidacionCodigo == ''">Verificar requisitos para liquidación</span>
-                <span *ngIf="element.estadoTramiteLiquidacionCodigo === '1' || element.estadoTramiteLiquidacionCodigo === '2'">Ver detalle/Editar</span>
+                Ver detalle/Editar
             </a>
             <button
                 *ngIf="element.estadoTramiteLiquidacionCodigo === '2'"
@@ -69,7 +77,7 @@
                 color="accent"
                 class="btn-table"
                 type="button"
-                [routerLink]="['verDetalleVerificacion', element.contratacionProyectoId]"
+                [routerLink]="['verDetalleRequisitos', element.contratacionProyectoId]"
             >
                 Ver detalle
             </a>
