--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
@@ -70,14 +70,32 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="!esVerDetalle && element.registroCompleto !== 'Completo'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validarBalance']"
         >
-          Validar
+         Validar
+        </a> 
+        <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarBalance']"
+        >
+          Ver detalle/Editar
+        </a>
+        <a *ngIf="esVerDetalle"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleBalance']"
+        >
+         Ver detalle
         </a>
       </td>
     </ng-container>
