--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
@@ -70,15 +70,32 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="!esVerDetalle && element.registroCompleto !== 'Completo'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validarInformeFinal', element.proyectoId]"
         >
-         <span *ngIf="element.registroCompleto !== 'Completo'">Validar</span>
-         <span *ngIf="element.registroCompleto === 'Completo'">Ver detalle/Editar</span>
+         Validar
+        </a> 
+        <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarInformeFinal', element.proyectoId]"
+        >
+          Ver detalle/Editar
+        </a>
+        <a *ngIf="esVerDetalle"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleInformeFinal', element.proyectoId]"
+        >
+         Ver detalle
         </a>
       </td>
     </ng-container>
