--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
@@ -70,15 +70,23 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a *ngIf="element.estadoValidacionLiquidacionCodigo !== '3'"
+        <a *ngIf="element.estadoValidacionLiquidacionCodigo === '0' || element.estadoValidacionLiquidacionCodigo == null || element.estadoValidacionLiquidacionCodigo == ''"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validarRequisitos', element.contratacionProyectoId]"
         >
-          <span *ngIf="element.estadoValidacionLiquidacionCodigo === '0' || element.estadoValidacionLiquidacionCodigo == null || element.estadoValidacionLiquidacionCodigo == ''">Validar requisitos para liquidación</span>
-          <span *ngIf="element.estadoValidacionLiquidacionCodigo === '1' || element.estadoValidacionLiquidacionCodigo === '2'">Ver detalle/Editar</span>
+          Validar requisitos para liquidación
+        </a>
+        <a *ngIf="element.estadoValidacionLiquidacionCodigo === '1' || element.estadoValidacionLiquidacionCodigo === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verDetalleEditarRequisitos', element.contratacionProyectoId]"
+        >
+          Ver detalle/Editar
         </a>
         <button
           *ngIf="element.estadoValidacionLiquidacionCodigo === '2'"
@@ -97,7 +105,7 @@
           color="accent"
           class="btn-table"
           type="button"
-          [routerLink]="['verDetalle', element.contratacionProyectoId]"
+          [routerLink]="['verDetalleRequisitos', element.contratacionProyectoId]"
         >
           Ver detalle
         </a>
