--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
@@ -6,9 +6,12 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      <span *ngIf="!registroCompleto || registroCompleto === 'Incompleto'">Validar informe final </span>
-      <span *ngIf="registroCompleto && registroCompleto === 'Completo'">Ver detalle/Editar validación de Informe final</span>
-      {{ data.informeFinal.proyecto.llaveMen }}
+      <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+          Ver detalle validación Informe final {{ data.informeFinal.proyecto.llaveMen }}
+      </ng-container>
+      <ng-template #noEsVerDetalle>
+          {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar' }} Informe final {{ data.informeFinal.proyecto.llaveMen }}
+      </ng-template>  
     </h1>
     <p class="colorMainColor mt-1em">
       <span class="mx-1em">
@@ -119,6 +122,6 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <app-form-observacion-informe-final *ngIf="listaTipoObservacionLiquidacionContratacion && listaMenu && contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.registrarSolicitudLiquidacionContratacion"></app-form-observacion-informe-final>
+  <app-form-observacion-informe-final *ngIf="listaTipoObservacionLiquidacionContratacion && listaMenu && contratacionProyectoId && data" [esVerDetalle]="esVerDetalle" [contratacionProyectoId] = "contratacionProyectoId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.registrarSolicitudLiquidacionContratacion"></app-form-observacion-informe-final>
 
 </section>
